GPLIM-2843 - Tweaking mvnAllTests.sh settings